name:        Cantis-network
version:     0.1.0.0
synopsis:    A generic libarary to build a P2P network.

description: The Cantis library is a generic library to build P2P
  network of computational nodes that exchange information from
  time-to-time. The library is agnostic towards the network layer and
  can be plugged in with different protocols as long as it allows the
  exchange of peering information. Network layer for some common
  protocol layers are supported.

homepage:         http://github.com/vashthestampede97/arivi
bug-reports:      https://github.com/xoken/vashthestampede97/issues

license:      BSD3
license-file: LICENSE
author:       Aryan Kumar Singh
maintainer:   aryansinghalpha97@gmail.com
-- copyright:
category:           Network
build-type:         Simple
extra-source-files: CHANGELOG.md, README.md
cabal-version:      >=1.10

source-repository head
  type: git
  location: https://github.com/vashthestampede97/Cantis/

library
  hs-source-dirs: lib
  build-depends:       async
                    ,  base >=4.9 && <4.11
                    ,  base16-bytestring
                    ,  binary >= 0.8.3.0
                    ,  bytestring
                    ,  cryptonite >= 0.23
                    ,  exceptions
                    ,  interpolatedstring-perl6
                    ,  lens
                    ,  lifted-base
                    ,  lifted-async
                    ,  memory >= 0.14.11
                    ,  monad-logger
                    ,  monad-control
                    ,  mtl
                    ,  network
                    ,  serialise
                    ,  stm >= 2.4.4.1
                    ,  text
                    ,  unordered-containers <= 0.2.9.0
                    ,  arivi-crypto
                    ,  arivi-utils

  ghc-options:  -Wall -Werror  -Wredundant-constraints -fno-defer-type-errors -fno-defer-out-of-scope-variables
  default-extensions:          FlexibleContexts
  exposed-modules:
                       Cantis.Env
                       Cantis.Network
                       Cantis.Network.Types
  other-modules:
                       Cantis.Network.Connection
                       Cantis.Network.DatagramServer
                       Cantis.Network.Exception
                       Cantis.Network.Fragmenter
                       Cantis.Network.ConnectionHandler
                       Cantis.Network.Handshake
                       Cantis.Network.HandshakeUtils
                       Cantis.Network.Instance
                       Cantis.Network.Reassembler
                       Cantis.Network.Replay
                       Cantis.Network.StreamClient
                       Cantis.Network.StreamServer
                       Cantis.Network.Utils

  default-language:    Haskell2010

test-suite arivi-network-test
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    default-language: Haskell2010
    ghc-options:      -threaded +RTS -N -RTS
    build-depends:     async
                    ,  base >=4.9 && <4.11
                    ,  bytestring
                    ,  exceptions
                    ,  hspec
                    ,  lifted-async
                    ,  monad-control
                    ,  monad-logger
                    ,  mtl
                    ,  stm >= 2.4.4.1
                    ,  time
                    ,  cantis-crypto
                    ,  cantis-utils
                    ,  cantis-network
                    ,  network
